ability to disable simulated human interaction #531 #731

--- a/web/templates/submission/index.html
+++ b/web/templates/submission/index.html
@@ -180,6 +180,11 @@ $(document).ready( function() {
                             </div>
                             <div class="checkbox">
                                 <label>
+                                    <input type="checkbox" name="human" checked />Enable Simulated Human Interaction</input>
+                                </label>
+                            </div>
+                            <div class="checkbox">
+                                <label>
                                     <input type="checkbox" name="services" />Enable Services <span class="text-muted"><small>(enable simulated environment specified in the auxiliary configuration)</small></span>
                                 </label>
                             </div>
