iexplore category filter

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -112,6 +112,9 @@ a.tag-label {
 .windows {
     background-color: #ffc5ee;
 }
+.iexplore {
+    background-color: #ccddbb;
+}
 .page-header {
     margin-bottom: 10px;
 }
