--- a/web/templates/analysis/share.html
+++ b/web/templates/analysis/share.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 {% block content %}
 <div class="row">
-    <div class="col-md-6"><p style="margin-bottom: 10px;"><img src="{{ STATIC_URL }}graphic/cuckoo.png" /></p></div>
+    <div class="col-md-6"><p style="margin-bottom: 10px;"><img src="{% static "graphic/cuckoo.png" %}" /></p></div>
 </div>
 <div class="row">
     <div class="alert alert-{% if result.0 == 2 %}info{% else %}{% if result.0 == 1 %}danger{% else %}success{% endif %}{% endif %}" role="alert">
